Use Scheme identifier style for zintern names.
Sun Jan  2 15:23:35 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* zintern/Makefile.am:
	* zintern/zintern.c: Use Scheme identifier style for zintern names.

	* zintern/gus-patch-mono.bse: Add a network for GUS Patch playback.

svn path=/trunk/; revision=3058

--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -6,7 +6,8 @@
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS
 
 ZFILE_DEFS = $(strip \
-	BSE_STD_SYNTH_MONO_WAVE			$(srcdir)/mono-wave.bse		\
+	wave-mono		$(srcdir)/wave-mono.bse		\
+	gus-patch-mono		$(srcdir)/gus-patch-mono.bse	\
 )
 
 gen_sources = xgen-bzc xgen-bzh
@@ -16,13 +17,14 @@ EXTRA_DIST += $(filter-out BSE_%, $(ZFILE_DEFS))
 
 bse-zfile.c:	zintern $(srcdir)/*.bse # bse-zfile.h
 	./zintern -b -z $(ZFILE_DEFS) > xgen-bzc					\
-	&& echo "static const BseZFile bse_zfiles[] = {" >> xgen-bzc		\
-	&& for i in $(filter BSE_%, $(ZFILE_DEFS)) ; do				\
-		echo "  { \"$$i\", $$i""_SIZE, "		>>xgen-bzc;	\
-		echo "    $$i""_DATA, G_N_ELEMENTS ($$i""_DATA) }," >>xgen-bzc;	\
-	done									\
-	&& echo "};" >> xgen-bzc						\
-	&& cp xgen-bzc $@							\
+	&& echo "static const BseZFile bse_zfiles[] = {" >> xgen-bzc			\
+	&& for i in $(filter-out %.bse, $(ZFILE_DEFS)) ; do				\
+		uname=$$(echo $$i | tr a-z- A-Z_);					\
+		echo "  { \"$$i\", $$uname""_SIZE, "	>>xgen-bzc;			\
+		echo "    $$uname""_DATA, G_N_ELEMENTS ($$uname""_DATA) }," >>xgen-bzc;	\
+	done										\
+	&& echo "};" >> xgen-bzc							\
+	&& cp xgen-bzc $@								\
 	&& rm -f xgen-bzc
 #bse-zfile.h:	zintern $(srcdir)/*.bse
 #	for i in $(filter BSE_%, $(ZFILE_DEFS)) ; do				\
