use "gus-patch" play-type.
Thu Jan  6 23:03:36 2005  Tim Janik  <timj@gtk.org>

        * bse/gslloader-pat.cc:
        * bse/bsetrack.c: use "gus-patch" play-type.

        * zintern/mono-wave.bse:
        * zintern/gus-patch-mono.bse: removed.

        * zintern/gus-patch.bse: removed "-mono" suffix from object.

svn path=/trunk/; revision=3076

--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_DEPRECATE
 
 ZFILE_DEFS = $(strip \
 	wave-mono		$(srcdir)/wave-mono.bse		\
-	gus-patch-mono		$(srcdir)/gus-patch-mono.bse	\
+	gus-patch		$(srcdir)/gus-patch.bse		\
 )
 
 gen_sources = xgen-bzc xgen-bzh
