added ::attached-hierarchy-changed signal to GtkWidgetClass. this signal
Wed Jan 19 19:41:12 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkutils.[hc]: added ::attached-hierarchy-changed signal
	to GtkWidgetClass. this signal is used to proxy the ::hierarchy-changed
	signal to out-of-branch widgets like an option menu's menu or a submenu.
	refer to the docs on gxk_widget_attached_hierarchy_changed().
	added gxk_menu_set_active() as a replacement for gtk_menu_set_active()
	which doesn't properly emit change notification.
	gxk_menu_attach*(): proxy ::attached-hierarchy-changed signals, this
	allowed a lot of internal code cleanups.

	* beast-gtk/gxk/gxkassortment.[hc]: new management and publishing object
	for administration of notebook pages and other dynamic selection lists.

	* beast-gtk/gxk/gxkmenubutton.[hc]: support assortment publishing.

	* beast-gtk/gxk/gxknotebook.[hc]: new replacement widget for GtkNotebook.
	GxkNotebook supports page updates through GxkAssortment.
	emits ::viewable-changed signal recursively upon page switches.

	* beast-gtk/bstapp.[hc]: publish a GxkAssortment to maintain
	project pages. added finalize handler. changed
	bst_app_reload_supers() to modify the project page assortment.

	* beast-gtk/gxk/gxkradget.[hc]: use GxkNotebook.
	added gxk_radget_data_dup_expand(), and an internal "gxk-adopt-hint"
	hook to allow widget packing through property slots (e.g. the
	"label-widget" property of GtkFrame).
	added new functions: $(strlt), $(strle), $(strgt), $(strge),
	$(strne) and $(streq) for string comparisons.

	* beast-gtk/gxk/gxkradgetfactory.c:
	connect to ::attached-hierarchy-changed on menus and recheck whether
	the factory is anchored.

	* beast-gtk/bstsupershell. [hc]: use GxkNotebook.
	removed notebook label hackery.

	* beast-gtk/bstparam-choice.c: use gxk_menu_set_active().

	* beast-gtk/bsttracksynthdialog.c:
	* beast-gtk/bstpreferences.c: use GxkNotebook.

	* beast-gtk/gxk/gxkaction.[hc]: minor fixes.

	* beast-gtk/dialogs/

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -23,7 +23,7 @@ gxk_headers = $(strip \
 	gxkradget.h	gxkaction.h		gxkglobals.h	gxkradgetfactory.h \
 	glewidgets.h	gxkracktable.h		gxkrackitem.h	gxksimplelabel.h \
 	gxkparam.h	gxkscrollcanvas.h	gxkimagecache.h	gxklogadjustment.h \
-	gxkmenubutton.h	gxkspline.h		\
+	gxkmenubutton.h	gxkspline.h		gxkassortment.h gxknotebook.h \
 	gxk.h \
 )
 gxk_c_sources = $(strip \
@@ -33,7 +33,7 @@ gxk_c_sources = $(strip \
 	gxkradget.c	gxkaction.c		gxkglobals.c	gxkradgetfactory.c \
 	glewidgets.c	gxkracktable.c		gxkrackitem.c	gxksimplelabel.c \
 	gxkparam.c	gxkscrollcanvas.c	gxkimagecache.c	gxklogadjustment.c \
-	gxkmenubutton.c	gxkspline.c		\
+	gxkmenubutton.c	gxkspline.c		gxkassortment.c gxknotebook.c \
 )
 gxk_extra_sources = $(strip \
 	gxkparam-entry.c	gxkparam-label.c	\
