changed BseWave magic to "#BseWave1".
Thu Jan 20 00:30:50 2005  Tim Janik  <timj@gtk.org>

        * bse/gslloader-bsewave.c: changed BseWave magic to "#BseWave1".

svn path=/trunk/; revision=3122

--- a/data/beast.xml.in
+++ b/data/beast.xml.in
@@ -11,7 +11,7 @@
   <mime-type type="audio/x-bsewave">
     <glob pattern="*.bsewave"/>
     <magic priority="80">
-      <match type="string" value="#BseWave" offset="0:64"/>
+      <match type="string" value="#BseWave1" offset="0:64"/>
     </magic>
     <_comment>BSE Multi-Part Wave File</_comment>
   </mime-type>
