implemented bse_project_inject_midi_control() to submit extra midi events
Mon Jan 24 22:38:21 2005  Tim Janik  <timj@gtk.org>

        * bseproject.proc: implemented bse_project_inject_midi_control() to
        submit extra midi events into a playing project.

        * Makefile.am: added bseloader-guspatch.cc.

        * bseloader-guspatch.cc:
        * gslcommon.[hc]: initialize guspatch loader with
        bse_init_loader_gus_patch().

        * bsemididecoder.c:
        * bsemidievent.c: zero initialize newly allocated midi events.

        * bsetrack.c: wording fixup.

svn path=/trunk/; revision=3166

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -92,6 +92,7 @@ bse_c_sources = $(strip \
 	bsenote.c		bsemidifile.c		\
 	bsecxxvalue.cc		bsecxxutils.cc		bsecxxbase.cc			bsecxxclosure.cc \
 	bsecxxarg.cc		bsecxxmodule.cc		bsecxxplugin.cc			\
+	bseloader-guspatch.cc	\
 )
 # Synthesis Modules
 bse_idl_sources = $(strip \
