removed obsolete .h C++ headers.
Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>

        * removed obsolete .h C++ headers.

        * adapted sources to compile against .hh C++ headers.

svn path=/trunk/; revision=3204

--- a/plugins/evaluator/Makefile.am
+++ b/plugins/evaluator/Makefile.am
@@ -19,7 +19,7 @@ bseevaluator_la_SOURCES = bseevaluator.cc $(EVALUATE_SOURCES)
 bseevaluator_la_LDFLAGS = -module -avoid-version
 bseevaluator_la_LIBADD  = $(BSE_LIBS) -lm
 plugins_built_sources += bseevaluator.gen-idl.h
-EXTRA_HEADERS += bseevaluator.idl symbols.h token.h instruction.h compiler.h cpu.h
+EXTRA_HEADERS += bseevaluator.idl symbols.hh token.hh instruction.hh compiler.hh cpu.hh
 $(bseevaluator_la_OBJECTS): bseevaluator.gen-idl.h
 
 plugin_LTLIBRARIES = bseevaluator.la
