removed obsolete .h C++ headers.
Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>

        * removed obsolete .h C++ headers.

        * adapted sources to compile against .hh C++ headers.

svn path=/trunk/; revision=3206

--- a/drivers/bse-portaudio/Makefile.am
+++ b/drivers/bse-portaudio/Makefile.am
@@ -27,7 +27,7 @@ drivers_LTLIBRARIES = bsepcmdevice-portaudio.la
 bsepcmdevice_portaudio_la_SOURCES = bsepcmdevice-portaudio.cc
 bsepcmdevice_portaudio_la_LDFLAGS = -module $(drivers_ldflags)
 bsepcmdevice_portaudio_la_LIBADD  = $(drivers_libs) $(PORTAUDIO_LIBS)
-EXTRA_HEADERS               += bsepcmdevice-portaudio.h
+EXTRA_HEADERS               += bsepcmdevice-portaudio.hh
 
 EXTRA_DIST += $(strip		\
 	${EXTRA_HEADERS}	\
