--- a/plugins/evaluator/Makefile.am
+++ b/plugins/evaluator/Makefile.am
@@ -9,7 +9,7 @@ plugindir = $(bseplugindir)
 # setup generation of C++ plugins from idl files
 SFIDL = ../../sfi/sfidl
 SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
-%.gen-idl.h: %.idl $(SFIDL)
+%.genidl.hh: %.idl $(SFIDL)
 	$(SFIDL) --plugin $(SFIDL_INC) -I$(top_builddir) $< > $@ || (rm $@ ; exit 1 )
 CLEANFILES += $(plugins_built_sources)
 
@@ -18,9 +18,9 @@ EVALUATE_SOURCES = instruction.cc compiler.cc cpu.cc
 bseevaluator_la_SOURCES = bseevaluator.cc $(EVALUATE_SOURCES)
 bseevaluator_la_LDFLAGS = -module -avoid-version
 bseevaluator_la_LIBADD  = $(BSE_LIBS) -lm
-plugins_built_sources += bseevaluator.gen-idl.h
+plugins_built_sources += bseevaluator.genidl.hh
 EXTRA_HEADERS += bseevaluator.idl symbols.hh token.hh instruction.hh compiler.hh cpu.hh
-$(bseevaluator_la_OBJECTS): bseevaluator.gen-idl.h
+$(bseevaluator_la_OBJECTS): bseevaluator.genidl.hh
 
 plugin_LTLIBRARIES = bseevaluator.la
 
