support $show-tabs for notebooks.
Mon Apr 11 00:51:33 2005  Tim Janik  <timj@gtk.org>

        * beast-gtk/dialogs/radgets-standard.xml: support $show-tabs
        for notebooks.

svn path=/trunk/; revision=3217

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 # BEAST/BSE - Bedevilled Audio System / Bedevilled Sound Engine
-# Copyright (C) 1998-2003 and Tim Janik
+# Copyright (C) 1998-2005 Tim Janik
 #
 ## Makefile.am for BEAST/BSE
 
