--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -104,7 +104,7 @@ plugins/artscompressor.idl
 plugins/bseadder.c
 plugins/bseatandistort.c
 plugins/bsebalance.idl
-plugins/bsefirfilter.c
+#plugins/bsefirfilter.c
 plugins/bseiirfilter.c
 plugins/bsemixer.c
 plugins/bsemult.c
@@ -114,7 +114,7 @@ plugins/bsesimpleadsr.c
 plugins/davbassfilter.idl
 plugins/davcanyondelay.c
 plugins/davchorus.idl
-plugins/davguitar.c
+#plugins/davguitar.c
 plugins/davorgan.c
 plugins/davsyndrum.c
 plugins/davxtalstrings.c
