more renames of C++ header files from .h to .hh.
Tue Apr 19 16:19:29 2005  Tim Janik  <timj@gtk.org>

        * more renames of C++ header files from .h to .hh.

        * tools/bsewavetool.cc, tools/bwtwave.cc: include .hh headers.

        * tools/bsewavetool.h, tools/bwtwave.h: removed.

svn path=/trunk/; revision=3242

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -23,8 +23,8 @@ bsefcompare_LDADD = $(programs_ldadd)
 programs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 
 headers = $(strip	\
-	bsewavetool.h	\
-	bwtwave.h	\
+	bsewavetool.hh	\
+	bwtwave.hh	\
 	sfiutils.h	\
 	bseloopfuncs.h	\
 )
