Added "eu" (Basque) to ALL_LINGUAS.
Fri May 13 11:51:00 2005  Iñaki Larrañaga  <dooteo@euskalgnu.org>

        * configure.in: Added "eu" (Basque) to ALL_LINGUAS.

svn path=/trunk/; revision=3264

--- a/configure.in
+++ b/configure.in
@@ -119,7 +119,7 @@ AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
     dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
-    ALL_LINGUAS="az bg ca cs de el en_CA en_GB eo es fr hr it ja mn nl pa pt pt_BR ru rw sq sr sr@Latn sv"
+    ALL_LINGUAS="az bg ca cs de el en_CA en_GB eo es eu fr hr it ja mn nl pa pt pt_BR ru rw sq sr sr@Latn sv"
     dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
     AC_SUBST(ALL_LINGUAS)
