fix missing files
svn path=/trunk/; revision=3276

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -120,3 +120,4 @@ plugins/davsyndrum.c
 plugins/davxtalstrings.c
 plugins/evaluator/bseevaluator.idl
 plugins/freeverb/bsefreeverb.c
+tools/bsewavetool.cc
