--- a/configure.in
+++ b/configure.in
@@ -85,6 +85,7 @@ AC_DEFINE_UNQUOTED(BST_ARCH_NAME, "$target", [Architecture Description])
 
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
+AC_ARG_ENABLE(toyprof,     [  --enable-toyprof=[no/yes]       turn on toy profiler, see sfi/toyprof.README],,)
 AC_ARG_ENABLE(devel-rules, [  --enable-devel-rules=[no/yes]   turn on developer build rules],,)
 # $enable_devel_rules
 
@@ -163,6 +164,9 @@ AC_DEFUN(AC_SFI_REQUIREMENTS,
 
     AC_CHECK_FUNCS(getpwnam_r getpwnam)
     AC_CHECK_FUNCS(timegm)
+    
+    dnl --- toy profiler ---
+    AM_CONDITIONAL(IF_TOYPROF, test x"$enable_toyprof" = xyes)
 
     dnl --- SFI directories ---
     sfidlstdincdir=${includedir}
