removed bstdebugkeys.defs and build rule.
Fri May 20 14:06:01 2005  Tim Janik  <timj@gtk.org>

        * beast-gtk/Makefile.am: removed bstdebugkeys.defs and build rule.

        * beast-gtk/bstapp.c: added menu items to popup demo dialogs for
        --devel mode.
        (app_action_check): don't invoke procedures on 0 project.

        * beast-gtk/bstmain.c: use bst_message_list_types() to display
        debugging keys.

        * beast-gtk/bstusermessage.h:
        * beast-gtk/bstusermessage.c: improved fatal error title. prefix
        primary text with message type for errors. adapted primary vs.
        secondary text display styles once more. allow configuration of
        all info, diag and debugging message dialogs.
        (bst_message_list_types): list all message types, sorted
        by identifier name.

        * beast-gtk/dialogs/radgets-beast.xml: append demo dialog menu items
        to the /Demo menu.

        * beast-gtk/bstutils.h, beast-gtk/bstutils.c:
        removed _bst_log_debug_keys().

        * beast-gtk/gxk/gxkaction.c: slight rename.

        * shell/bse-scm-glue.boot: define (bse-exit-message) to conveniently
        leave a message and exit at once.

svn path=/trunk/; revision=3298

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -81,8 +81,8 @@ beast_extra_sources = $(strip 						\
 	bstparam-item-seq.c		bstrackeditor-covers.c		\
 )
 beast_extra_files = $(strip \
-	bstmarshal.list					\
-	bstdebugkeys.defs	bstrecords.idl		\
+	bstmarshal.list		\
+	bstrecords.idl		\
 )
 # BEAST built sources needed by all objects
 beast_built_depend_sources = $(strip \
@@ -185,21 +185,6 @@ bstmarshal.c: bstmarshal.list
 	glib-genmarshal --prefix=bst_marshal $(srcdir)/bstmarshal.list --body > xgen-bmc \
 	&& cp xgen-bmc $@ \
 	&& rm -f xgen-bmc
-
-SCANKEYS=$(TEXITHEQUE) scankeys --
-
-debug_key_globs = $(top_srcdir)/beast-gtk/*.[hc] $(top_srcdir)/bse/*.[hc] $(top_srcdir)/bse/*.cc $(top_srcdir)/sfi/*.[hc] $(top_srcdir)/sfi/*.cc
-bstdebugkeys.defs: @DVLBUILD@ $(debug_key_globs)
-	cd $(srcdir) \
-	&& echo > xgen-bdkd \
-	&& grep -E 'sfi_debug(|_check)\b' $(debug_key_globs) \
-	| $(SCANKEYS) --key sfi_debug --key sfi_log_check \
-	     --tmplkey   '  %s,\n' \
-	     --needkeys - \
-	| sort >> xgen-bdkd \
-	&& cp xgen-bdkd $@ \
-	&& rm -f xgen-bdkd
-$(srcdir)/bstutils.c: bstdebugkeys.defs
 
 #
 # setup BEAST sources and their dependancies
