added .scm scripts with type gettext/scm-funcs, so these currently need a
Sat May 21 00:26:15 2005  Tim Janik  <timj@gtk.org>

        * POTFILES.in: added .scm scripts with type gettext/scm-funcs, so these
        currently need a hacked intltool-extract that can handle gettext/scm-funcs.

svn path=/trunk/; revision=3305

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -100,6 +100,12 @@ data/bse.keys.in
 drivers/bse-alsa/bsemididevice-alsa.c
 drivers/bse-alsa/bsepcmdevice-alsa.c
 drivers/bse-portaudio/bsepcmdevice-portaudio.cc
+[type: gettext/scm-funcs] library/scripts/mixer-splitup-by-track.scm
+[type: gettext/scm-funcs] library/scripts/modules2grid.scm
+[type: gettext/scm-funcs] library/scripts/part-harmonic-transposer.scm
+[type: gettext/scm-funcs] library/scripts/progressor-example.scm
+[type: gettext/scm-funcs] library/scripts/record-midi.scm
+[type: gettext/scm-funcs] library/scripts/song-parts-operations.scm
 plugins/artscompressor.idl
 plugins/bseadder.c
 plugins/bseatandistort.c
